regression/verilog/functioncall/return4.sv
module main;

  function void some_void();
    return 123; // error: must not return value
  endfunction

endmodule
